--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Social and Behavioral Sciences Team
 description: We are a cross-agency team with backgrounds in a diversity of fields, including economics, policy, psychology, law, medicine, statistics and political science. What unifies us is our commitment to using what research tells us about how people make decisions to better serve Americans and improve government efficiency.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://sbst.gov" # the base hostname & protocol for your site
-logo: /assets/img/logos/SBST_color.jpg
+logo: /assets/img/logos/logo-name.png
 feature_image: /assets/img/potus.jpg
 
 colors:
