--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,5 @@
+- title: 2016 Annual Report
+  link: /2016-annual-report/
 - title: 2015 Annual Report
   link: /2015-annual-report/
   featured: true
