--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,6 +3,7 @@
   featured: true
 - title: 2015 Annual Report
   link: /2015-annual-report/
+  featured: true
 - title: Microloans for Farmers
   description: A new letter increases farmers' access to credit by 22%.
   link: /projects/microloans-for-farmers/
