--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,8 @@
-- title: 2016 Annual Report
-  link: /2016-annual-report/
+- title: 2016 Projects
+  link: /2016-projects/
   featured: true
-- title: 2015 Annual Report
-  link: /2015-annual-report/
+- title: 2015 Projects
+  link: /2015-projects/
   featured: true
 - title: Microloans for Farmers
   description: A new letter increases farmers' access to credit by 22%.
