--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Social and Behavioral Sciences Team
-description: We are a cross-agency team with backgrounds in a diversity of fields, including economics, policy, psychology, law, medicine, statistics and political science. What unifies us is our commitment to using what research tells us about how people make decisions to better serve Americans and improve government efficiency.
+title: Office of Evaluation Sciences
+description: The Office of Evaluation Sciences (OES) brings diverse scientific expertise to Federal agencies to apply insights about human behavior to improve Government’s interactions with people, test and learn what works using rigorous methods.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://sbst.gov" # the base hostname & protocol for your site
+url: "https://oes.gsa.gov" # the base hostname & protocol for your site
 logo: /assets/img/logos/logo-name.png
 feature_image: /assets/img/potus.jpg
 
@@ -23,7 +23,7 @@ colors:
       background: '#f2c446'
       text: '#134050'
   footer:
-    background: '#4c4c4c'
+    background: '#999999'
     text: '#fff'
 
 analytics:
@@ -50,11 +50,10 @@ forms:
 
 footer:
   image: /assets/img/gsa-logo-dark.jpg
-  email: sbst@gsa.gov
+  email: oes@gsa.gov
   twitter:
     - usgsa
-    - whitehouseostp
-  text: This site is run by the General Services Administration for the National Science and Technology Council's Subcommittee on the Social and Behavioral Sciences Team.
+  text:  
 
 # Build settings
 markdown: kramdown
