--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,8 @@
-- title: 2016 Projects
-  link: /2016-projects/
+- title: 2016 Portfolio
+  link: /2016-portfolio/
   featured: true
-- title: 2015 Projects
-  link: /2015-projects/
+- title: 2015 Portfolio
+  link: /2015-portfolio/
   featured: true
 - title: Microloans for Farmers
   description: A new letter increases farmers' access to credit by 22%.
