--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -2,6 +2,6 @@
 assigned:
     - {text: About, permalink: /about/, href: /pages/about.md}
     - {text: Work, permalink: /work/, href: /pages/work.md}
-    - {text: Apply, permalink: /apply/, href: /pages/apply.md}
+    - {text: Apply, permalink: /workwithus/, href: /pages/apply.md}
 
 
