--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: /assets/img/logos/logo-name.png
 feature_image: /assets/img/Kites-small.jpg
 
 # Site theme
-theme: jekyll-uswds
+theme: uswds-jekyll
 
 # Styles
 styles:
