--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,7 @@ primary:
     href: /about/
   - text: Our projects
     href: /projects/
+  - text: Team
+    href: /team/
   - text: Work with us
     href: /workwithus/
