Change team page nav link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ primary:
     href: /about/
   - text: Our projects
     href: /projects/
-  - text: Team
+  - text: The team
     href: /team/
   - text: Work with us
     href: /workwithus/
