--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ forms:
       value: -7861934959779167198
 
 footer:
-  image: /assets/img/gsa-logo-dark.jpg
+  image: /assets/img/icons/gsa-white.svg
   email: oes@gsa.gov
   twitter:
     - usgsa
