--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: The Office of Evaluation Sciences (OES) brings diverse scientific e
 url: "https://oes.gsa.gov" # the base hostname & protocol for your site
 logo: /assets/img/logos/logo-name.png
 feature_image: /assets/img/Kites-small.jpg
+permalink: pretty
 
 # Site theme
 theme: uswds-jekyll
@@ -24,7 +25,12 @@ defaults:
       path: ''
       type: projects
     values:
-      layout: project
+      layout: project-single
+  - scope:
+      path: ''
+      type: team
+    values:
+      layout: team-single
 
 colors:
   primary: '#0071bc'
