--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,13 @@
 primary:
   - text: About
     href: /about/
-  - text: Our projects
-    href: /projects/
-  - text: The team
+  - text: Approach
+    href: /approach/
+  - text: Work
+    href: /work/
+  - text: Collaborate
+    href: /collaborate/
+  - text: Team
     href: /team/
-  - text: Work with us
-    href: /work-with-us/
+  - text: Join
+    href: /join/  
