--- a/_config.yml
+++ b/_config.yml
@@ -40,22 +40,7 @@ analytics:
     code: 'UA-67580537-1'
   dap:
     agency: GSA
-    subagency: SBST
-
-forms:
-- type: newsletter
-  url: https://docs.google.com/forms/d/1Tsdm_2spbxWnmTFMrH5eHxpOAN9W4LB3eaMMXJ1N0rU/formResponse
-  button: Subscribe
-  privacypolicy:
-    name: GSA Privacy and Security Notice
-    url: https://gsa.gov
-  fields:
-    - type: email
-      name: entry.1440502332
-      label: Email Address
-    - type: hidden
-      name: fbzx
-      value: -7861934959779167198
+    subagency: OES
 
 footer:
   image: /assets/img/icons/gsa-white.svg
