button removal attempt 3

--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,7 @@ footer:
   text:
 
 forms:
-- type: newsletter
-  privacypolicy:
+- privacypolicy:
     name: GSA Privacy and Security Notice
     url: https://gsa.gov
 
