--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 primary:
   - text: About
     href: /about/
+  - text: Approach
+    href: /approach/
   - text: Work
     href: /work/
   - text: Collaborate
