--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,8 @@ primary:
     href: /approach/
   - text: Work
     href: /work/
+  - text: Team
+    href: /team/
   - text: Collaborate
     href: /collaborate/
   - text: Join
