--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ primary:
     href: /work/
   - text: Team
     href: /team/
+  - text: Events
+    href: /events/
   - text: Contact
     href: /contact/
 
