--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ primary:
   - text: Evidence Act Toolkits
     href: /toolkits/
   - text: Opportunities
-    href: /opportunities/
+    href: /opps/
   - text: Events
     href: /events/
   - text: Press
