--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,8 @@ primary:
     href: /about/
   - text: Evaluation Portfolio
     href: /evalportfolio/
-  - text: Evaluation Methods
-    href: /methods/
-  - text: Using Evidence
-    href: /usingevidence/
+  - text: Resources
+    href: /resources/
   - text: Evidence Act Toolkits
     href: /toolkits/
   - text: Opportunities
