--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 primary:
-  - text: About
+  - text: Mission
     links:
+    - text: About
+      href: /about/
     - text: Team
       href: /team/
   - text: Projects
