--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ primary:
       href: /evalportfolio/
   - text: Resources
     links: 
-    - text: OES Guides
+    - text: Methods & Guides
       href: /resources/
     - text: Evidence Act Toolkits
       href: /toolkits/
