--- a/_data/learningagenda.yml
+++ b/_data/learningagenda.yml
@@ -1,23 +1,31 @@
   - name: I. Purpose and Benefits
     image: /assets/img/icons/light_bulb.png
+    question: What are the benefits of a learning agenda?
 
   - name: II. Types of Learning Questions
     image: /assets/img/icons/question_mark.png
+    question: What types of questions go into a learning agenda?
 
   - name: III. Engaging Stakeholders
     image: /assets/img/icons/people_team.png
+    question: Who should be involved in the learning agenda development process?
 
   - name: IV. Encouraging Leadership Buy-In
     image: /assets/img/icons/handshake.png
+    question: How do I get leadership input and support?
 
   - name: V. Developing a Learning Agenda
     image: /assets/img/icons/document_check.png
+    question: What is the process for developing a learning agenda?
 
   - name: VI. Using Stakeholder Input
     image: /assets/img/icons/puzzle_piece.png
+    question: How does stakeholder engagement inform question development?
 
   - name: VII. Writing the Learning Agenda
     image: /assets/img/icons/pen.png
+    question: How do I write my agency's learning agenda?
 
   - name: VIII. Additional Resources
     image: /assets/img/icons/book.png
+    question: Where can I find additional resources on learning agendas? 
