reverting previous test commit

--- a/_data/learningagenda.yml
+++ b/_data/learningagenda.yml
@@ -1,4 +1,4 @@
-- name: 1. Purpose and Benefits TEST
+- name: 1. Purpose and Benefits
   image: /assets/img/icons/light_bulb.png
   question: What are the benefits of a learning agenda?
   id: 1
