--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,8 @@ primary:
       href: /resources/
     - text: Evidence Act Toolkits
       href: /toolkits/
+    - text: Utilization Blog
+      href: /blog/
   - text: Connect
     links:
       - text: Contact
