--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ primary:
       href: /resources/
     - text: Evidence Act Toolkits
       href: /toolkits/
-    - text: Utilization Blog
+    - text: OES Blog
       href: /blog/
   - text: Connect
     links:
