--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ primary:
       href: /work/
   - text: Resources
     links: 
-    - text: Methods
-      href: /methods/
+    - text: Evaluation Process
+      href: /evaluationprocess/
     - text: Guides
       href: /resources/
     - text: Evidence Act Toolkits
