--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@ primary:
     links:
     - text: Evaluation Portfolio
       href: /work/
+    - text: Other Collaborations
+      href: /collaborations/
   - text: Resources
     links: 
     - text: Methods
