--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -27,6 +27,6 @@ primary:
         href: /events/
       - text: Opportunities
         href: /opps/
-      - text: Press
-        href: /press/
+      - text: Media
+        href: /media/
 
