--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ primary:
   - text: Resources
     links:
     - text: Evaluation Process
-      href: /evaluationprocess/
+      href: /methods/
     - text: Guides
       href: /resources/
     - text: Evidence Act Toolkits
